k8s/be-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: decauth-be-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: decauth-be
  template:
    metadata:
      name: decauth-be-pods
      labels:
        app: decauth-be
    spec:
      containers:
        - name: decauth-be
          image: xeff09/decauth-be:latest
---
apiVersion: v1
kind: Service
metadata:
  name: decauth-be-node
spec:
  type: NodePort
  selector:
    app: decauth-be
  ports:
    - port: 9090
      targetPort: 9090
      nodePort: 30001
---
apiVersion: v1
kind: Service
metadata:
  name: decauth-be-cluster
spec:
  type: ClusterIP
  selector:
    app: decauth-be
  ports:
    - port: 9090
      targetPort: 9090
