k8s/pg-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: decauth-pg-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: decauth-pg
  template:
    metadata:
      name: decauth-pg-pods
      labels:
        app: decauth-pg
    spec:
      containers:
        - name: decauth-pg
          image: postgres:16-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgresdata
      volumes:
        - name: postgresdata
          persistentVolumeClaim:
            claimName: decauth-pg-volume-claim
---
apiVersion: v1
kind: Service
metadata:
  name: decauth-pg-cluster
spec:
  type: ClusterIP
  selector:
    app: decauth-pg
  ports:
    - port: 5432
      targetPort: 5432
